# Numerics

./: .gitignore  CMakeLists.txt  README.md  main.cpp
includes/: scalar.hpp
includes/scalar/: concepts.hpp  operand.hpp  operator.hpp  traits.hpp
includes/scalar/operator/: common.hpp  exp.hpp  sqrt.hpp
